Revision history for Perl extension AnyEvent.

	- document the first parameter passed to condvar callbacks to be
          the callback.
        - add AnyEvent::Socket::{ntoa,aton} aliases.

4.22 Sun Jul 20 16:34:13 CEST 2008
	- new function AnyEvent::Socket::parse_hostport.
        - as the bulkheads at microsoft can't even get getprotobyname reliably
          working on their shitty fucking broken os we need to hardcode
          some common protocol numbers in AnyEvent::Socket. How can
          people even bother with such a pile of shit as windows.

4.21 Thu Jul 17 14:40:05 CEST 2008
	- INCOMPATIBLE CHANGE: AnyEvent::Util::fork_call now has a prototype
          which is incompatible to previous invocation syntax.
        - work around more windows perl bugs in fork_call. I cannot imagine
          why anybody would bother implementing fork in such an obviously
          unusable way.
	- avoid calling $do_retry if the request has already finished in
          AnyEvent::DNS, thus avoiding an exception (reported by Anatoly
          K. Sharifulin).

4.2  Sat Jul 12 22:42:11 CEST 2008
	- support an "interval" argument for repeating timers.
        - fix a bug in the pure perl event loop that caused timers to
          be delayed under some circumstances.
        - implement optional argument checking via PERL_ANYEVENT_STRICT.
	- not importing anything from Event causes it to malfunction
          and not use Time::HiRes, work around this bug.
        - more bug workarounds against the endlessly broken Tk module,
          seems to work now on 32 bit machines, but less so on 64 bit.
        - minor optimisations applied to most backends.

4.161 Fri Jul  4 14:24:48 CEST 2008
        - fixed the t/handle/02_write.t, it read after write, with the
          assumption that all data could be written before read
          (reported by Jim Razmus).

4.160 Thu Jul  3 04:02:21 CEST 2008
	- re-registering signal watchers after unregistering one did